<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosContacto">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/cabecera"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout

        android:id="@+id/layout1"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cabecera"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <TextView
            android:id="@+id/labelNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lNombre"
            android:textSize="@dimen/textoDetalle"
            android:layout_marginRight="@dimen/margin_right"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paramNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pDescripcion"
            android:textSize="@dimen/textoDetalle" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/layout2"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_campos"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1">

        <TextView
            android:id="@+id/labelFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lFecha"
            android:textSize="@dimen/textoDetalle"
            android:layout_marginRight="@dimen/margin_right"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paramFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pFecha"
            android:textSize="@dimen/textoDetalle" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/layout3"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_campos"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2">

        <TextView
            android:id="@+id/labelTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lTel"
            android:textSize="@dimen/textoDetalle"
            android:layout_marginRight="@dimen/margin_right"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paramTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pTelefono"
            android:textSize="@dimen/textoDetalle" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/layout4"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_campos"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout3">

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lEmail"
            android:textSize="@dimen/textoDetalle"
            android:layout_marginRight="@dimen/margin_right"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paramEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pEmail"
            android:textSize="@dimen/textoDetalle" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/layout5"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_campos"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout4">

        <TextView
            android:id="@+id/labelDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lDescripcion"
            android:textSize="@dimen/textoDetalle"
            android:layout_marginRight="@dimen/margin_right"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paramDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pNombre"
            android:textSize="@dimen/textoDetalle" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout5"
        android:layout_marginTop="@dimen/cabecera"
        style="@style/Boton"
        android:text="@string/editar"
        android:textSize="20dp"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        />

</androidx.constraintlayout.widget.ConstraintLayout>